[gd_scene load_steps=2 format=3 uid="uid://tycyx6lcxkql"]

[ext_resource type="Script" path="res://ui/options_menu/options_menu.gd" id="1_nhuys"]

[node name="options_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nhuys")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1008.0
offset_top = 176.0
offset_right = 1832.0
offset_bottom = 912.0

[node name="resolution_button" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="window_button" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[connection signal="item_selected" from="VBoxContainer/resolution_button" to="." method="_on_res_option_button_item_selected"]
[connection signal="item_selected" from="VBoxContainer/window_button" to="." method="_on_window_button_item_selected"]
